==> jpnorair/OpenTag/otplatform/stm32l1xx/platform_STM32L1xx.c <==
#include "OT_utils.h"
#include "OT_types.h"
#include "OT_config.h"
#include "OT_platform.h"
#include "veelite.h"
#include "veelite_core.h"
#include "buffers.h"
#include "auth.h"
#include "mpipe.h"
#include "radio.h"
#include "system.h"
#include "session.h"

void platform_poweron() {
    
    ///1. Set cooperative task runtime in P-stack,
    ///   Interrupts and protected system calls run in M-stack
    __set_PSP( __get_MSP() );
    __set_CONTROL(2);
    __set_MSP( (ot_u32)&platform_ext.sstack[(OT_PARAM_SSTACK_ALLOC/4)-1] );
    
    /// 3. Board-Specific power-up configuration
    BOARD_PERIPH_INIT();
    BOARD_POWER_STARTUP();
    
    ///2. Configure GPIO
    //platform_init_gpio();
    BOARD_PORT_STARTUP();
    
    /// 3. Configure Clocks
    platform_init_busclk();
    platform_init_periphclk();
    
    /// 5. Debugging setup
#   if defined(__DEBUG__) || defined(__PROTO__)
    DBGMCU->CR     |= ( DBGMCU_CR_DBG_SLEEP \
                      | DBGMCU_CR_DBG_STOP \
                      | DBGMCU_CR_DBG_STANDBY);
    
    DBGMCU->APB1FZ |= ( DBGMCU_APB1_FZ_DBG_RTC_STOP \
                      | DBGMCU_APB1_FZ_DBG_WWDG_STOP \
                      | DBGMCU_APB1_FZ_DBG_IWDG_STOP);

    DBGMCU->APB2FZ |= ( DBGMCU_APB2_FZ_DBG_TIM9_STOP \
                      | DBGMCU_APB2_FZ_DBG_TIM10_STOP \
                      | DBGMCU_APB2_FZ_DBG_TIM11_STOP);
#   endif

    /// 6. Final initialization of OpenTag system resources
               // Set up connections on the board
    platform_init_interruptor();    // Interrupts OpenTag cares about
    platform_init_gptim(0);         // Initialize GPTIM (to 1024 Hz)
    
    /// 7. Start the chronometer if not in debug mode
#   if !defined(__DEBUG__)
    gptim_start_chrono();
#   endif
    
    /// 8. Initialize Low-Level Drivers (worm, mpipe)
    // Restore vworm (following save on shutdown)
    vworm_init();
}

void platform_poweroff() {
    ISF_syncmirror();
    vworm_save();
    
#   if ( OT_FEATURE(MPIPE) && MCU_CONFIG(MPIPECDC) )
    mpipe_disconnect(NULL);
#   endif
}

void platform_init_OT() {
    /// 1. Initialize Data sources required by basically all OT features
    ///    - Buffers module allocates the data queues, used by all I/O
    ///    - Veelite module allocates and prepares the filesystem
    buffers_init();
    vl_init();

    /// 2. Initialize the RTC, if available.
#   if (OT_FEATURE(RTC))
        platform_init_rtc(364489200);
#   endif
    
    /// 3. Look for errors, report them, and make sure to clear the error RAM.
    /// @note This is a decent place to put a breakpoint when debugging.
    if (RTC->BKP19R != 0) {
        vlFILE*     fp;
        ot_uni16    resets;
        ot_uni16    faults;
        ot_uni32    error;
        
        error.ulong     = RTC->BKP19R;
        RTC->BKP19R     = 0;
        fp              = ISF_open_su(ISF_ID(hardware_fault_status));
        resets.ushort   = vl_read(fp, 0);
        faults.ushort   = vl_read(fp, 2);
        resets.ubyte[0]+= (error.ushort[LOWER] != 0);
        resets.ubyte[1]+= (error.ushort[UPPER] != 0);
        faults.ubyte[1]+= (error.ushort[LOWER] == 11) << 1; //Memory Fault
        
        vl_write(fp, 0, resets.ushort);
        vl_write(fp, 2, faults.ushort);
        vl_close(fp);
    }    
    
    /// 4. Initialize the System (Kernel & more).  The System initializer must
    ///    initialize all modules that are built onto the kernel.  These include
    ///    the DLL and MPipe.
    sys_init();
    
    /// 5. If debugging, copy the UNIQUE ID that ST writes into the ROM into
    ///    the lower 48 bits of the Mode 2 UID (Device Settings ISF)
    ///
    /// @note the ID is inserted via Veelite, so it is abstracted from the 
    /// file memory configuration of your board and/or app. 
#   if (defined(__DEBUG__) || defined(__PROTO__))
    {
        vlFILE* fpid;
        ot_u16* hwid;
        ot_int  i;
        
        fpid    = ISF_open_su(ISF_ID(device_features));
        hwid    = (ot_u16*)(0x1FF80050);
        for (i=6; i!=0; i-=2) {
            vl_write(fpid, i, *hwid++);
        }
        vl_close(fpid);
    }
#   else
    ///@note for production (__RELEASE__) the default UID should be written to
    ///      the default file location by the manufacturer firmware upload.

#   endif

    ///5. This prevents the scheduler from getting called by a preemption
    ///   event until it officially begins.  It allows some tasks to be
    ///   used for special purposes at power-on (namely MPipe).
    platform_ext.task_exit = (void*)__get_PSP();
}

void platform_init_busclk() {
/// This function should be called during initialization and restart, right at
/// the top of platform_poweron().
    ot_u16 counter;
    
    ///1. RESET System Clocks
    ///@todo This may not be necessary.  These settings should be reset default settings.
    
    // Assure MSI bit is on (it should be, by default)
    RCC->CR    |= (uint32_t)0x00000100;
    
    // Configure dividers and PLL information (even if not used) and keep active clock
    // via MSI (these fields are 0)
    RCC->CFGR   = ( _PLL_SRC | _PLL_MULT | _PLL_DIV | _AHB_DIV | _APB1_DIV | _APB2_DIV );    

    // Reset HSION, HSEON, HSEBYP, CSSON and PLLON bits
    // Disable all clocker interrupts (default)
    RCC->CR    &= (uint32_t)0xEEFAFFFE;
    RCC->CIR    = 0x00000000;


    ///2. Prepare external Memory bus (not currently supported)
//#   ifdef DATA_IN_ExtSRAM
//        SystemInit_ExtMemCtl(); 
//#   endif
    
    ///3a. Begin clocking system with MSI clock at specified frequency.
    ///    <LI> Specified as PLATFORM_MSCLOCK_HZ in board support header </LI>
    ///    <LI> MSI is only used as standard clock if BOARD_FEATURE_STDSPEED
    ///           is also ENABLED in board support header.
#   if BOARD_FEATURE(STDSPEED)
        // Change MSI to required frequency
#       if (PLATFORM_MSCLOCK_HZ == 4200000)
        sub_voltage_config((POWER_1V5 | PWR_CR_DBP));
        FLASH->ACR  = FLASH_ACR_ACC64;
        FLASH->ACR |= FLASH_ACR_PRFTEN;
        RCC->ICSCR ^= 0x00006000;               //setting 110
        
#       elif (PLATFORM_MSCLOCK_HZ == 2100000)
        FLASH->ACR  = FLASH_ACR_ACC64;
        FLASH->ACR |= (FLASH_ACR_PRFTEN | FLASH_ACR_LATENCY);
        sub_voltage_config((POWER_1V2 | PWR_CR_DBP));
        //RCC->ICSCR |= 0x00005000;                //setting 101 (default)
        
#       else
#       error "MSI speeds below 2.1 MHz not supported currently."
        
#       endif

        // Setup the Bus Dividers as specified (MSI already selected as system clock)
        sub_set_clockhz(PLATFORM_MSCLOCK_HZ);


    ///3b. Use HSE or HSI without PLL as Full-Speed clock
    ///    <LI> HSE or HSI is full speed clock if BOARD_FEATURE_STDSPEED is 
    ///           DISABLED and BOARD_FEATURE_FULLSPEED is ENABLED</LI>
    ///    <LI> HSE is used if BOARD_FEATURE_HFXTAL is ENABLED, else HSI used. </LI>
    ///    <LI> Boards using HSE can declare any value into PLATFORM_HSCLOCK_HZ.
    ///           Board using HSI may only declare 2, 4, 8, or 16 MHz</LI>
#   elif BOARD_FEATURE(FULLSPEED)
        // Basic Flash setup, then run normal routine
        FLASH->ACR |= FLASH_ACR_ACC64;
        FLASH->ACR |= FLASH_ACR_PRFTEN;
        platform_full_speed();


    ///3c. Begin clocking system with PLL driven from HSE or HSI
    ///    <LI> PLL only used if .... </LI>
    ///    <LI> Use BOARD_PARAM_PLLdiv, BOARD_PARAM_PLLmult to specify the 
    ///           particular PLL configuration.  For example, if using USB
    ///           (BOARD_PARAM_HFHz * BOARD_PARAM_PLLmult) must be 96 MHz, and
    ///           (96 MHz / BOARD_PARAM_PLLdiv) == PLATFORM_HSCLOCK_HZ. </LI>
#   elif BOARD_FEATURE(FLANKSPEED)
        // Basic Flash setup, then run normal routine
        FLASH->ACR |= FLASH_ACR_ACC64;
        FLASH->ACR |= FLASH_ACR_PRFTEN;
        platform_flank_speed();
        
#   else 
#       error "At least one of BOARD_FEATURE_STDSPEED, _FULLSPEED, or _FLANKSPEED must be ENABLED"
#   endif

    /// X. Vector Table Relocation in Internal SRAM or FLASH.
#   ifdef VECT_TAB_SRAM
#       error "Silly rabbit! SRAM is for DATA!"
        SCB->VTOR   = SRAM_BASE;  
#   else
        SCB->VTOR   = FLASH_BASE;
#   endif
}

OT_INLINE void platform_disable_interrupts() {
    __disable_irq();    // CMSIS intrinsic
}

OT_INLINE void platform_enable_interrupts() {
    __enable_irq();     // CMSIS intrinsic
}

void platform_drop_context(ot_uint i) {
/// This function should only be called from a kernel supervisor call (SVC).
/// In normal sytems it is used via sys_kill().  In applications using threads,
/// sys_kill() (or code by-way-of sys_kill()) is responsible for calling the 
/// task exit function and emptying the thread stack.

#   if (OT_PARAM_SYSTHREADS != 0)
        // Here would go some context clearing jazz
#   endif
    
    // Safety check!
    if (platform_ext.task_exit != NULL) {
        // Initial Task LR was placed on P-stack by NVIC HW when this interrupt
        // occurred.  By design it has a 6-word offset from PSP.  Overwrite it
        // with the saved address that sends code to RETURN_FROM_TASK.
        register ot_u32 task_lr;
        asm volatile ("MRS  %0, PSP" : "=r"(task_lr) );
        ((ot_u32*)task_lr)[6] = (ot_u32)platform_ext.task_exit;
    }
}

void platform_ot_preempt() {
/// Run the kernel scheduler by using system call.  If running a kernel task,
/// do not run the scheduler (we check this by inspecting the KTIM interrupt
/// enabler bit), as the ktask will run to completion and do the call in its 
/// own context (platform_ot_run()).

    if (platform_ext.task_exit == NULL) 
        __SET_PENDSV();
}

OT_INLINE void platform_ot_run() {
/// This function must be run in a while(1) loop from main.  It is the context
/// used by Kernel Tasks, which are co-operatively multitasked.

    /// 1. Run the Scheduler.  The scheduler will issue a PendSV if there is a 
    /// threaded task, in which case the P-stack will get changed to that 
    /// thread, and the code after this call will not run until all threads are 
    /// dormant.
    __SEND_SVC(0);
    
    
    /// 2. When the PC is here, it means that a kernel task has been scheduled 
    ///    or that no task is scheduled.  If no task is scheduled, then it is
    ///    time to go to sleep (or more likely STOP mode).  The powerdown 
    ///    routine MUST re-enable interrupts immediately before issuing the WFI
    ///    instruction.
    while (gptim.flags & GPTIM_FLAG_SLEEP) {
        platform_disable_interrupts();
        platform_enable_ktim();
        sys_powerdown();
    }    
    
    /// 3. Save the current P-stack pointer (PSP), and push the return address 
    ///    onto this position.  If the task is killed during its runtime, this
    ///    data will be used to reset the P-stack and PC.
    
    ///@note this code only works with GCC-based compilers.  The && operator
    /// ahead of the label is a label-reference, and it is a GCC feature.
    {   register ot_u32 return_from_task;
        platform_ext.task_exit  = (void*)__get_PSP();
        return_from_task        = (ot_u32)&&RETURN_FROM_TASK;
        asm volatile ("PUSH {%0}" : : "r"(return_from_task) );
    }

    /// 4. Run the Tasking Engine.  It will call the ktask or switch to the 
    /// thread, as needed based on what is scheduled.
    sys_run_task();
    
    /// 5. In any condition, retract the stack to a known, stable condition.
    /// If the task/thread exited cleanly, this changes nothing.  If killed, 
    /// this will flush the stack.
    RETURN_FROM_TASK:
    __set_PSP( (ot_u32)platform_ext.task_exit );
    platform_ext.task_exit = NULL;

}

void platform_enable_rtc() {
/// OpenTag's RTC feature on STM32L is entirely managed in software by a
/// kernel task of specific design.  It is always running, so killing it
/// actually just resets the task.
#if 0 //(OT_FEATURE(RTC) == ENABLED)
    sys_kill(TASK_RTC);
#endif
}

void platform_disable_rtc() {
/// OpenTag's RTC feature on STM32L is entirely managed in software by a 
/// kernel task of specific design.  The task is always running, so it is
/// "disabled" by setting the update interval to a slow amount (256 sec).
/// This is done by killing the task!
#if 0 //(OT_FEATURE(RTC) == ENABLED)
    TASK_RTC->cursor = 255;
    sys_kill(TASK_RTC);
#endif
}

void platform_memcpy(ot_u8* dst, ot_u8* src, ot_uint length) {
#if MCU_CONFIG(MEMCPYDMA)
    sub_memcpy_dma(dst, src, length);
#else
    DUFF_DEVICE_8(*dst++, *src++, length);
#endif
}

void platform_memcpy_2(ot_u16* dst, ot_u16* src, ot_uint length) {
#if MCU_CONFIG(MEMCPYDMA)
    sub_memcpy2_dma( dst, src, length);
#else
    platform_memcpy((ot_u8*)dst, (ot_u8*)src, length<<1);
#endif
}

void platform_memset(ot_u8* dst, ot_u8 value, ot_uint length) {
#if MCU_CONFIG(MEMCPYDMA)
    MEMCPY_DMACHAN->CCR     = 0;
    MEMCPY_DMA->IFCR        = MEMCPY_DMA_INT;       ///@todo see if this can be globalized
    MEMCPY_DMACHAN->CPAR    = (ot_u32)dst;
    MEMCPY_DMACHAN->CMAR    = (ot_u32)&value;
    MEMCPY_DMACHAN->CNDTR   = length;
    MEMCPY_DMACHAN->CCR     = DMA_CCR1_DIR      | DMA_CCR1_PINC     | \
                              DMA_CCR1_PL_LOW   | DMA_CCR1_MEM2MEM  | \
                              DMA_CCR1_EN;
    while((MEMCPY_DMA->ISR & MEMCPY_DMA_INT) == 0);

#else
    DUFF_DEVICE_8(*dst++, value, length);
#endif
}
