==> jpnorair/OpenTag/otplatform/msp430f5/platform_MSP430F5.c <==
#include "OT_platform.h"
#include "OTAPI.h"
#include "veelite_core.h"
#include "mpipe.h"
#include "radio.h"

void platform_disable_interrupts() {
    __bic_SR_register(GIE);
    __no_operation();
}

void platform_enable_interrupts() {
    __bis_SR_register(GIE);
    __no_operation();
}

void platform_drop_context(ot_uint i) {
/// Send the kill signal to the special kill ISR.  On MSP430 & CC430, this is
/// always the CCR0 of the GPTIM, which has a special interrupt of its own,
/// above the other GPTIM interrupts.  The kill signal is only sent if there is
/// an active kernel task running.  Thus exotasks can only be killed if there
/// is a custodial kernel task associated with the exotask (as typical).
///
/// @note Since MSP430 only supports GULP right now, the usage of GULP is
/// implicit with this implementation.  If multiple context stacks become
/// supported in a later, enhanced version (I will call it "Big GULP"), this
/// function can also flush that stack.
///
    if (platform_ext.task_entry != NULL) {
    	OT_GPTIM->CCR0 |= 0x0011;
    } 
}

void platform_ot_preempt() {
/// The kernel scheduler runs normally in co-operative mode, and it is invoked
/// always after a task finishes running.  The kernel scheduler must also run
/// in pre-emptive mode if the chip is asleep (otherwise it will run normally
/// in co-operative mode after the task completes).  In this function, we just
/// check if GPTIM is hot, which means the chip is asleep.  If so, it will
/// invoke sys_event_manager() pre-emptively.
    if (OT_GPTIM->CCTL1 & CCIE) {
        OT_GPTIM->CCTL1 |= (sys_event_manager() == 0) | CCIE;
    }
}

void platform_ot_run() {
/// This function must be run in a while(1) loop from main.

	/// 1. Interrupt Management:
	/// The kernel timer should not cause an interrupt during the runtime of
	/// the kernel task (disable ktim).  Exotask interrupts (interrupts that
	/// are not ktim) must be enabled, though, so exotasks can run.
	platform_disable_ktim();
	platform_enable_interrupts();
    
	/// 2. Program Stack Shenanigans, Part 1:
	/// Save the present address of the program stack.  The task has not been
	/// started yet, so the stack offset should be 0, but we save it anyway
	/// in case of future changes to the system structure by me or you.
#   if (CC_SUPPORT == GCC)
        asm volatile("MOV.W   SP,%0" : "=m"(platform_ext.task_entry)  );     
#   elif (CC_SUPPORT == CL430)  
        platform_ext.task_entry = (ot_u16*)_get_SP_register();
#   endif
    
    /// 3. Invoke the kernel task!
	sys_run_task();

	/// 4. Program Stack Shenanigans, Part 2:
	/// Manually refresh the stack from the saved value.  If the task exited
	/// cleanly, this code basically makes 0 = 0.  If the task was killed, then
	/// it will clobber whatever task data is left on the stack.
#   if (CC_SUPPORT == GCC)
	RETURN_FROM_TASK:
        asm ("MOV.W   %0,SP" : : "m"(platform_ext.task_entry)  );  
#   elif (CC_SUPPORT == CL430)
        asm ("RETURN_FROM_TASK:");
        _set_SP_register((ot_u16)platform_ext.task_entry);
#   endif
	platform_ext.task_entry = NULL;

	/// 5. Run Kernel Scheduler:
	/// Disable interrupts while the scheduler (event manager) runs.  It runs
	/// reasonably fast, probably never more than 1000 cycles (~50us) and
	/// often much less.  If it returns 0, it means there is a task to do right
	/// away.  If it returns non-zero (unsigned), there is a task to do later,
	/// so go to low-power-mode in the meantime.
	platform_disable_interrupts();
	if (sys_event_manager()) {
		sys_powerdown();
	}
}

void platform_poweron() {
    /// 1. CC430-specific Initial Power-On Routine
    /// <LI> Hold Watchdog timer through the power-on routine           </LI>
    /// <LI> Set Core Voltage to 2.2V, as needed by 20 MHz mode         </LI>
    /// <LI> Enable High Side (Vcc) NMI, and low side (Vcore) Reset     </LI>
    /// <LI> Clear Power Manager Flags and reset the Voltage Monitor    </LI>
    /// <LI> Enable User NMI's (SW NMI, Osc Fault, Flash Violation)     </LI>

    WDTA->CTL = WDTPW + WDTHOLD;

    BOARD_POWER_STARTUP();

    /// 2. Initialize OpenTag platform peripherals
    platform_init_busclk();
    platform_init_interruptor();

    SFRIFG1 &= ~(NMIIFG | OFIFG | VMAIFG);
    SFRIE1   = (NMIIE | /* OFIE | */ ACCVIE);   //Oscillator fault can be glitchy

    platform_init_gptim(0x01C3);        // Initialize GPTIM (to 1024 Hz)
    platform_init_gpio();
    platform_init_memcpy();
    platform_init_prand( *((ot_u16*)0x1A10) );   // Seed is part of Chip ID

    /// 3. Initialize Low-Level Drivers (worm, mpipe)
    // Restore vworm (following save on shutdown)
    vworm_init();
}

void platform_poweroff() {
/// 1. Disable all NMI interrupts that can break flash writes. <BR>
/// 2. Put any mirror data into the flash <BR>
/// 3. Save the vworm mapping table
/// 4. If using USB, disconnect it
    ot_u8 old_sfrie1 = SFRIE1;
    SFRIE1 = 0;
    ISF_syncmirror();
    vworm_save();
    SFRIE1 = old_sfrie1;

#   if (OT_FEATURE(MPIPE) == ENABLED)
    	mpipe_disconnect(NULL);
#   endif
}

void platform_init_OT() {
    /// 1. Initialize Data sources required by basically all OT features
    ///    - Buffers module allocates the data queues, used by all I/O
    ///    - Veelite module allocates and prepares the filesystem
	buffers_init();
	vl_init();

    /// 2. Initialize the RTC, if available.
#   if (OT_FEATURE(RTC))
        platform_init_rtc(364489200);
#   endif
	
	/// 3. Initialize the System (Kernel & more).  The System initializer must
    ///    initialize all modules that are built onto the kernel.  These include
    ///    the DLL and MPipe.
    sys_init();
	
	/// 4. If debugging, find the Chip ID and use 6 out of 8 bytes of it to
    ///    yield the UID.  This ID might not be entirely unique -- technically, 
    ///    there is 1/65536 chance of non-uniqueness, but practically the 
    ///    chance is much lower, given the way chips are distributed.  For 
    ///    test/debug, this is adequately unique.
    ///
    /// @note the ID is inserted via Veelite, so it is abstracted from the 
    /// file memory configuration of your board and/or app. 
#   if (defined(__DEBUG__) || defined(DEBUG_ON))
    {
		vlFILE* fpid;
		ot_u16* hwid;
		ot_int  i;

        fpid    = ISF_open_su(1);
        hwid    = (ot_u16*)(0x1A08);

        for (i=2; i<8; i+=2) {
        	ot_u16 scratch;
        	scratch	    = *hwid++;
        	scratch	    = __swap_bytes(scratch);
        	scratch	   ^= *hwid++;

            vl_write(fpid, i, scratch);
        }
        vl_close(fpid);
    }
#   endif
}

void platform_init_busclk() {

    /// 1. Board Specific XTAL startup routine
    ///    (Must be defined in Board Support Header)
    BOARD_XTAL_STARTUP();

    /// 2. Select LF clock: it can be REFO or XT1 (XT1 is preferred).  If an
    ///    LF crystal is available, it will be used for XT1.
#   if defined(MCU_PARAM_LFXTALHz)
#       define CLKSRC_32768     sourceXT1
        SELECT_ACLK(ACLKSRC_XT1CLK);
#   else
#       define CLKSRC_32768     sourceREFO
        SELECT_ACLK(ACLKSRC_REFOCLK);
        UCS->CTL6  |= UCS_CTL6_XT1OFF; //Disable LFXT1 after startup
#   endif

    ///3. CONFIGURE FLL - set DCO to multiply the LS/HS clock
    ///   A good area for code optimization is UCS_FLL_settle(), which is
    ///   general purpose and bloated
#   if defined(MCU_PARAM_OSCHz)
        UCS->CTL3 = ((ot_u16)CLKSRC_32768 << 4) | (ot_u16)refdiv1;
#   elif defined(MCU_PARAM_XTALHz)
        UCS->CTL3 = ((ot_u16)sourceXT2 << 4) | (ot_u16)refdiv1;
#   else
#       error "MCLK not bound to XTAL or OSC"
#   endif
    UCS_FLL_settle((PLATFORM_HSCLOCK_HZ/1000), PLATFORM_HSCLOCK_MULT);

    ///4. Configure 32768Hz -> ACLK, DCO -> MCLK, DCO/X -> SMCLK
#   if (PLATFORM_SMCLK_DIV == 1)
#		define _SMCLK_DIV   div1
#   elif (PLATFORM_SMCLK_DIV == 2)
#		define _SMCLK_DIV   div2
#   elif (PLATFORM_SMCLK_DIV == 4)
#		define _SMCLK_DIV   div4
#   elif (PLATFORM_SMCLK_DIV == 8)
#		define _SMCLK_DIV   div8
#   elif (PLATFORM_SMCLK_DIV == 16)
#		define _SMCLK_DIV   div16
#   else
#       error SMCLK divider not supported, must be: 1,2,4,8,16
#   endif

    UCS->CTL4   = (CLKSRC_32768 << clockACLK) | \
    		      (sourceDCO << clockMCLK) | \
    		      (sourceDCO << clockSMCLK);

    UCS->CTL5   = (div1 << clockACLK) | \
		          (div1 << clockMCLK) | \
		          (_SMCLK_DIV << clockSMCLK);
}

void platform_enable_rtc() {
    RTC->PS1CTL |= RT1PSIE;
}

void platform_disable_rtc() {
    RTC->PS1CTL &= ~RT1PSIE;
}

void platform_memcpy(ot_u8* dest, ot_u8* src, ot_int length) {
#if (OS_FEATURE(MEMCPY) == ENABLED)
    memcpy(dest, src, length);

#elif (MCU_FEATURE(MEMCPYDMA) == ENABLED)
/// DMA driven method: MSP430 DMA Block Transfer is blocking, and the CPU is
/// stopped during the data movement.  Thus the while loop is not needed.
    MEMCPY_DMA->SA_L    = (ot_u16)src;
    MEMCPY_DMA->DA_L    = (ot_u16)dest;
    MEMCPY_DMA->SZ      = length;
    MEMCPY_DMA->CTL     = ( DMA_Mode_Block | \
                            DMA_DestinationInc_Enable | \
                            DMA_SourceInc_Enable | \
                            DMA_DestinationDataSize_Byte | \
                            DMA_SourceDataSize_Byte | \
                            DMA_TriggerLevel_RisingEdge | \
                            0x11);
    //while ((MEMCPY_DMA->CTL & DMAIFG) == 0);
    //DMA must be manually cleared on zero-length copy
    MEMCPY_DMA->CTL    &= ~(0x10);
    
#else
/// Uses the "Duff's Device" for loop unrolling.  If this is incredibly
/// confusing to you, check the internet for "Duff's Device."
    if (length != 0) {
        ot_int loops = (length + 3) >> 2;

        switch (length & 3) {
            case 0: do {    *dest++ = *src++;
            case 3:         *dest++ = *src++;
            case 2:         *dest++ = *src++;
            case 1:         *dest++ = *src++;
                        }
                        while (--loops > 0);
        }
    }

#endif
}

void platform_memcpy_2(ot_u16* dest, ot_u16* src, ot_int length) {
#if (MCU_FEATURE(MEMCPYDMA) == ENABLED)
/// DMA driven method: CC430 DMA Block Transfer is blocking, and the CPU is
/// stopped during the data movement.  Thus the while loop is not needed.
/// DMA memcpy cannot be used reliably if OpenTag makes use of the DMA for some
/// other non-blocking process (e.g. MPipe).
    MEMCPY_DMA->SA_L    = (ot_u16)src;
    MEMCPY_DMA->DA_L    = (ot_u16)dest;
    MEMCPY_DMA->SZ      = length;
    MEMCPY_DMA->CTL     = ( DMA_Mode_Block | \
                            DMA_DestinationInc_Enable | \
                            DMA_SourceInc_Enable | \
                            DMA_DestinationDataSize_Word | \
                            DMA_SourceDataSize_Word | \
                            DMA_TriggerLevel_High | \
                            0x11);
    //while ((MEMCPY_DMA->CTL & DMAIFG) == 0);
    //DMA must be manually cleared on zero-length copy
    MEMCPY_DMA->CTL    &= ~(0x10);

#else
    platform_memcpy((ot_u8*)dest, (ot_u8*)src, length<<1);

#endif
}

void platform_memset(ot_u8* dest, ot_u8 value, ot_int length) {
#if (OS_FEATURE(MEMCPY) == ENABLED)
    memset(dest, value, length);

#elif (MCU_FEATURE(MEMCPYDMA) == ENABLED)
/// DMA driven method: CC430 DMA Block Transfer is blocking, and the CPU is
/// stopped during the data movement.  Thus the while loop is not needed.
/// DMA memcpy cannot be used reliably if OpenTag makes use of the DMA for some
/// other non-blocking process (e.g. MPipe).
    MEMCPY_DMA->SA_L    = (ot_u16)&value;
    MEMCPY_DMA->DA_L    = (ot_u16)dest;
    MEMCPY_DMA->SZ      = length;
    MEMCPY_DMA->CTL     = ( DMA_Mode_Block | \
                            DMA_DestinationInc_Enable | \
                            DMA_SourceInc_Disable | \
                            DMA_DestinationDataSize_Byte | \
                            DMA_SourceDataSize_Byte | \
                            DMA_TriggerLevel_High | \
                            0x11);
    //while ((MEMCPY_DMA->CTL & DMAIFG) == 0);
    //DMA must be manually cleared on zero-length copy
    MEMCPY_DMA->CTL    &= ~(0x10);

#else
/// Uses the "Duff's Device" for loop unrolling.  If this is incredibly
/// confusing to you, check the internet for "Duff's Device."
    if (length != 0) {
        ot_int loops = (length + 3) >> 2;

        switch (length & 3) {
            case 0: do {    *dest++ = value;
            case 3:         *dest++ = value;
            case 2:         *dest++ = value;
            case 1:         *dest++ = value;
                        }
                        while (--loops > 0);
        }
    }

#endif
}
